// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Pagination /> > Pagination Snapshot 1-10 > Default 1-10 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pagination"
      >
        <div
          class="paginationItem fakeItem"
          data-testid="fakeItem"
        />
        <div
          class="paginationItem fakeItem"
          data-testid="fakeItem"
        />
        <div
          class="paginationItem fakeItem"
          data-testid="fakeItem"
        />
        <div
          class="paginationItem fakeItem"
          data-testid="fakeItem"
        />
        <div
          class="paginationItem paginationItemSelected "
          data-testid="paginationItem"
        >
          1
        </div>
        <div
          class="paginationItem  "
          data-testid="paginationItem"
        >
          2
        </div>
        <div
          class="paginationItem  "
          data-testid="paginationItem"
        >
          ...
        </div>
        <div
          class="paginationItem  "
          data-testid="paginationItem"
        >
          10
        </div>
        <div
          class="paginationItem  nextPage"
          data-testid="nextPage"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.25 4.5l7.5 7.5-7.5 7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pagination"
    >
      <div
        class="paginationItem fakeItem"
        data-testid="fakeItem"
      />
      <div
        class="paginationItem fakeItem"
        data-testid="fakeItem"
      />
      <div
        class="paginationItem fakeItem"
        data-testid="fakeItem"
      />
      <div
        class="paginationItem fakeItem"
        data-testid="fakeItem"
      />
      <div
        class="paginationItem paginationItemSelected "
        data-testid="paginationItem"
      >
        1
      </div>
      <div
        class="paginationItem  "
        data-testid="paginationItem"
      >
        2
      </div>
      <div
        class="paginationItem  "
        data-testid="paginationItem"
      >
        ...
      </div>
      <div
        class="paginationItem  "
        data-testid="paginationItem"
      >
        10
      </div>
      <div
        class="paginationItem  nextPage"
        data-testid="nextPage"
      >
        <svg
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.25 4.5l7.5 7.5-7.5 7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Pagination /> > Pagination Snapshot 5-10 > Default  5-10 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pagination"
      >
        <div
          class="paginationItem  previousPage"
          data-testid="previousPage"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.75 19.5L8.25 12l7.5-7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <div
          class="paginationItem  "
          data-testid="paginationItem"
        >
          1
        </div>
        <div
          class="paginationItem  "
          data-testid="paginationItem"
        >
          ...
        </div>
        <div
          class="paginationItem  "
          data-testid="paginationItem"
        >
          4
        </div>
        <div
          class="paginationItem paginationItemSelected "
          data-testid="paginationItem"
        >
          5
        </div>
        <div
          class="paginationItem  "
          data-testid="paginationItem"
        >
          6
        </div>
        <div
          class="paginationItem  "
          data-testid="paginationItem"
        >
          ...
        </div>
        <div
          class="paginationItem  "
          data-testid="paginationItem"
        >
          10
        </div>
        <div
          class="paginationItem  nextPage"
          data-testid="nextPage"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.25 4.5l7.5 7.5-7.5 7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pagination"
    >
      <div
        class="paginationItem  previousPage"
        data-testid="previousPage"
      >
        <svg
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.75 19.5L8.25 12l7.5-7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <div
        class="paginationItem  "
        data-testid="paginationItem"
      >
        1
      </div>
      <div
        class="paginationItem  "
        data-testid="paginationItem"
      >
        ...
      </div>
      <div
        class="paginationItem  "
        data-testid="paginationItem"
      >
        4
      </div>
      <div
        class="paginationItem paginationItemSelected "
        data-testid="paginationItem"
      >
        5
      </div>
      <div
        class="paginationItem  "
        data-testid="paginationItem"
      >
        6
      </div>
      <div
        class="paginationItem  "
        data-testid="paginationItem"
      >
        ...
      </div>
      <div
        class="paginationItem  "
        data-testid="paginationItem"
      >
        10
      </div>
      <div
        class="paginationItem  nextPage"
        data-testid="nextPage"
      >
        <svg
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.25 4.5l7.5 7.5-7.5 7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Pagination /> > Pagination Snapshot 10-10 > Default  10-10 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pagination"
      >
        <div
          class="paginationItem  previousPage"
          data-testid="previousPage"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.75 19.5L8.25 12l7.5-7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <div
          class="paginationItem  "
          data-testid="paginationItem"
        >
          1
        </div>
        <div
          class="paginationItem  "
          data-testid="paginationItem"
        >
          ...
        </div>
        <div
          class="paginationItem  "
          data-testid="paginationItem"
        >
          9
        </div>
        <div
          class="paginationItem paginationItemSelected "
          data-testid="paginationItem"
        >
          10
        </div>
        <div
          class="paginationItem fakeItem"
          data-testid="fakeItem"
        />
        <div
          class="paginationItem fakeItem"
          data-testid="fakeItem"
        />
        <div
          class="paginationItem fakeItem"
          data-testid="fakeItem"
        />
        <div
          class="paginationItem fakeItem"
          data-testid="fakeItem"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pagination"
    >
      <div
        class="paginationItem  previousPage"
        data-testid="previousPage"
      >
        <svg
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.75 19.5L8.25 12l7.5-7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <div
        class="paginationItem  "
        data-testid="paginationItem"
      >
        1
      </div>
      <div
        class="paginationItem  "
        data-testid="paginationItem"
      >
        ...
      </div>
      <div
        class="paginationItem  "
        data-testid="paginationItem"
      >
        9
      </div>
      <div
        class="paginationItem paginationItemSelected "
        data-testid="paginationItem"
      >
        10
      </div>
      <div
        class="paginationItem fakeItem"
        data-testid="fakeItem"
      />
      <div
        class="paginationItem fakeItem"
        data-testid="fakeItem"
      />
      <div
        class="paginationItem fakeItem"
        data-testid="fakeItem"
      />
      <div
        class="paginationItem fakeItem"
        data-testid="fakeItem"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
